{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 37,
  "lineage": "dd541e14-b911-c919-8e82-a004fdcbd682",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mi_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:897722676610:instance/i-015c3e9b2126c9fae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015c3e9b2126c9fae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fa95e7b61796933",
            "private_dns": "ip-10-0-1-242.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.242",
            "public_ip": "54.243.7.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c3aca23920435eb6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b50ac47927f354aa",
            "tags": {
              "Name": "Servidor-Docker"
            },
            "tags_all": {
              "Name": "Servidor-Docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095f73406f2292dc7"
            ]
          },
          "dependencies": [
            "aws_security_group.mi_sg",
            "aws_subnet.mi_subnet",
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722676610:internet-gateway/igw-0ee4e5c6987973a7c",
            "id": "igw-0ee4e5c6987973a7c",
            "owner_id": "897722676610",
            "tags": {
              "Name": "mi-gateway"
            },
            "tags_all": {
              "Name": "mi-gateway"
            },
            "vpc_id": "vpc-0ba612d9c2ef07d51"
          },
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mi_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722676610:route-table/rtb-06244575541b7c0f9",
            "id": "rtb-06244575541b7c0f9",
            "owner_id": "897722676610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee4e5c6987973a7c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mi-route-table"
            },
            "tags_all": {
              "Name": "mi-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba612d9c2ef07d51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mi_igw",
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mi_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c451588ad9374f4",
            "route_table_id": "rtb-06244575541b7c0f9",
            "subnet_id": "subnet-0b50ac47927f354aa"
          },
          "dependencies": [
            "aws_internet_gateway.mi_igw",
            "aws_route_table.mi_route_table",
            "aws_subnet.mi_subnet",
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mi_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722676610:security-group/sg-095f73406f2292dc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095f73406f2292dc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mi_sg",
            "name_prefix": "",
            "owner_id": "897722676610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mi-sg"
            },
            "tags_all": {
              "Name": "mi-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ba612d9c2ef07d51"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mi_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722676610:subnet/subnet-0b50ac47927f354aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b50ac47927f354aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "897722676610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mi-subnet"
            },
            "tags_all": {
              "Name": "mi-subnet"
            },
            "vpc_id": "vpc-0ba612d9c2ef07d51"
          },
          "dependencies": [
            "aws_vpc.mi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:897722676610:vpc/vpc-0ba612d9c2ef07d51",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0427c182ade007f69",
            "default_route_table_id": "rtb-09dbf2fdfa060d35d",
            "default_security_group_id": "sg-0639dfa04e6f13f0f",
            "dhcp_options_id": "dopt-0853d2dec5869f2b4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ba612d9c2ef07d51",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dbf2fdfa060d35d",
            "owner_id": "897722676610",
            "tags": {
              "Name": "mi-vpc"
            },
            "tags_all": {
              "Name": "mi-vpc"
            }
          }
        }
      ]
    }
  ]
}